Stop jump when change titles on hover

--- a/stylesheets/svd-color-space.css
+++ b/stylesheets/svd-color-space.css
@@ -364,6 +364,7 @@ button:hover {
 
     h1 {
         order: 0;
+        height: 45px;
     }
 
     .equation {
